force-app/main/default/objects/CA_Condominio__c/CA_Condominio__c.object-meta.xml
<CustomObject>
    <label>Condomínio</label>
    <nameField>
        <label>Condomínio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condominios</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>