force-app/main/default/objects/CA_Condominio__c/fields/CA_Administradora__c.field-meta.xml
<CustomField>
    <fullName>CA_Administradora__c</fullName>
    <label>Administradora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>