force-app/main/default/objects/CA_Condominio__c/fields/CA_DiasMudanca__c.field-meta.xml
<CustomField>
    <fullName>CA_DiasMudanca__c</fullName>
    <label>Dias de Mudança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>