force-app/main/default/objects/CA_Condominio__c/fields/CA_Sindico__c.field-meta.xml
<CustomField>
    <fullName>CA_Sindico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Síndico</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Condominios (Síndico)</relationshipLabel>
    <relationshipName>Condominios</relationshipName>
    <type>Lookup</type>
</CustomField>