force-app/main/default/objects/CA_Condominio__c/fields/HorariosMudanca__c.field-meta.xml
<CustomField>
    <fullName>HorariosMudanca__c</fullName>
    <label>Horários de Mudança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>